--- a/mad-women/index.html
+++ b/mad-women/index.html
@@ -252,7 +252,7 @@
 
 <p>재미있는 점은 ‘광녀’의 의미와 기준이 훗날 달라진다는 것입니다. 지금까지 이 채널에서 전한 남자 유향이 쓴 《열녀전》 이야기를 많이 한 적이 있습니다. 그런데 북송 남자 <a href="https://zh.wikipedia.org/wiki/%E7%8E%8B%E5%9B%9E_(1023%E5%B9%B4)">왕회</a>가 지은 〈열녀전 서〉에 따르면, 유명한 문인이자 정치가였던 <a href="https://ko.wikipedia.org/wiki/%EC%99%95%EC%95%88%EC%84%9D">왕안석</a>은 친구 왕회가 《열녀전》을 파는 것을 놀리며 왜 “여러 광녀 이야기를 서술하여 만든 책”을 좋아하느냐고 물었다고 합니다.</p>
 
-<p>일찍이 〈미녀를 혐오한 남자〉라는 포스트에서 소개했듯이, 《열녀전》에는 총 일곱 가지의 여성 유형이 나옵니다. 이 일곱 가지 중 여섯 가지가 긍정적인 내용이고, 나머지 한 가지가 유일하게 부정적인 내용입니다. 이를 보건대 《열녀전》의 저자 유향은 최대한 다양한 유형의 미덕을 가진 여성들의 이야기를 소개하고자 한 것 같습니다. 그러나 왕안석에게 있어 이들은 모두 ‘미친 여자’에 불과했던 것입니다.</p>
+<p>일찍이 〈<a href="/liu-xiang-hated-beautiful-women/">미녀를 혐오한 남자</a>〉라는 포스트에서 소개했듯이, 《열녀전》에는 총 일곱 가지의 여성 유형이 나옵니다. 이 일곱 가지 중 여섯 가지가 긍정적인 내용이고, 나머지 한 가지가 유일하게 부정적인 내용입니다. 이를 보건대 《열녀전》의 저자 유향은 최대한 다양한 유형의 미덕을 가진 여성들의 이야기를 소개하고자 한 것 같습니다. 그러나 왕안석에게 있어 이들은 모두 ‘미친 여자’에 불과했던 것입니다.</p>
 
 <p>혹시 왕안석이 부정적인 유형만을 찍어서 ‘미친 여자’라고 한 것은 아니었을까요? 아닙니다. 왕안석의 물음에 대한 왕회의 대답을 살펴보면 《열녀전》의 여자들은 악한 자[惡者]와 미친 자[狂者]로 분류되었고, 후자는 “<a href="https://db.cyberseodang.or.kr/front/alphaList/BookMain.do?bnCode=jti_2g0202&amp;titleId=C72">비록 예의에 맞지는 않으나 한결같이 善에 뜻을 두어 행실을 규방에서 이루었다</a>”라는 평가를 받았습니다. 전한 남자 유향은 《열녀전》에서 뛰어난 언변으로 작게는 가족을 살리고 크게는 나라를 구한 여자들을 칭송했습니다. 하지만 북송 남자 왕회와 왕안석은 이들의 언행이 선했음을 인정하면서도 여자가 자기 목소리를 낸 것 자체가 예의에 어긋난다고 여기고 이들에게 ‘미친 여자’라는 딱지를 붙인 것입니다.</p>
 
