--- a/sanguo-pocket-01/index.html
+++ b/sanguo-pocket-01/index.html
@@ -264,7 +264,7 @@
 <p>1권에서는 역사책 《삼국지》에 나오는 호칭·지칭 표현을 하나하나 수집하여 예문과 함께 쓰임새를 설명했습니다. 호칭어의 사용 양상이 삼국지 캐해석의 유용한 단서가 될 수 있다는 것을 보여줍니다.</p>
 
 <ul>
-  <li>관련 텀블벅 프로젝트: https://tumblbug.com/books-of-han-2</li>
+  <li>관련 텀블벅 프로젝트: <a href="https://tumblbug.com/books-of-han-2">https://tumblbug.com/books-of-han-2</a></li>
 </ul>
 
 <h4 id="분량">분량</h4>
@@ -274,7 +274,7 @@
 <h4 id="표지">표지</h4>
 
 <figure class="image" style="text-align:center;">
-    <img src="/assets/images/s1-cover-front.jpg" alt="삼국지포켓북 1. 호칭어 가이드 (주아 지음)" />
+    <img src="/assets/images/s1-cover-front.png" alt="삼국지포켓북 1. 호칭어 가이드 (주아 지음)" />
     <figcaption>삼국지포켓북 1. 호칭어 가이드 표지</figcaption>
 </figure>
 
